syntax = "proto3";

import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "GameCore.Protos";

package game_service;

service GameService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Echo(EchoRequest) returns (EchoResponse);
  rpc SyncCharacters(stream SyncCharactersRequest) returns (stream SyncCharactersResponse);
  rpc SyncChat(stream SyncChatRequest) returns (stream SyncChatResponse);
  rpc Move(MoveRequest) returns (MoveResponse);
  rpc Chat(ChatRequest) returns (ChatResponse);
  rpc ChangeName(ChangeNameRequest) returns (User);
  rpc ChangeSkin(ChangeSkinRequest) returns (User);
  rpc Logout(google.protobuf.Empty) returns (google.protobuf.Empty);
}

message TimeOffset {
  google.protobuf.Timestamp Time = 1;
  google.protobuf.Duration Offset = 2;
}

message User {
  string ID = 1;
  string Name = 2;
  string Email = 3;
  uint32 Skin = 4;
  Vector2 Position = 5;
}

message Vector2 {
  float X = 1;
  float Y = 2;
}

message Character {
  string ID = 1;
  string Name = 2;
  uint32 Skin = 3;
  Vector2 Position = 4;
}

message LoginRequest {
  string Account = 1;
}

message LoginResponse {
  TimeOffset ServerTime = 1;
  User User = 2;
}

message EchoRequest {
  TimeOffset ClientTime = 1;
}

message EchoResponse {
  google.protobuf.Duration ClientToGateway = 1;
  google.protobuf.Duration GatewayToSilo = 2;
  google.protobuf.Duration SiloToGateway = 3;
  TimeOffset SiloTime = 4;
}

message SyncCharactersRequest {
  string ID = 1;
}

message SyncCharactersResponse {
  string ID = 1;
  oneof Action {
    SyncCharacterJoin Join = 2;
    google.protobuf.Empty Leave = 3;
    Vector2 Move = 4;
    string Rename = 5;
    uint32 Skin = 6;
  }
}

message SyncCharacterJoin {
  Vector2 Position = 1;
  string Name = 2;
  uint32 Skin = 3;
}

message MoveRequest {
  Vector2 Position = 1;
}

message MoveResponse {
  Character Character = 1;
}

message SyncChatRequest {
  string ID = 1;
}

message SyncChatResponse {
  string Sender = 1;
  string Message = 2;
}

message ChatRequest {
  string Message = 1;
}

message ChatResponse { }

message ChangeNameRequest {
  string NewName = 1;
}

message ChangeSkinRequest {
  int32 NewSkin = 1;
}
